# ComfyUI-HunyuanVideo-Foley

./: .gitattributes  .gitignore  README.md  __init__.py  gradio_app.py  infer.py  node_list.json  nodes.py  pyproject.toml  requirements.txt  utils.py
assets/: test.csv
example_workflows/: HunyuanVideoFoleyExample.json
hunyuanvideo_foley/models/: hifi_foley.py
hunyuanvideo_foley/models/dac_vae/: __init__.py  _audiotools_stubs.py
hunyuanvideo_foley/models/dac_vae/model/: base.py  dac.py
hunyuanvideo_foley/models/dac_vae/nn/: __init__.py  layers.py  quantize.py
hunyuanvideo_foley/models/nn/: attn_layers.py  embed_layers.py  posemb_layers.py
hunyuanvideo_foley/models/synchformer/: modeling_ast.py  motionformer.py  video_model_builder.py  vit_helper.py
hunyuanvideo_foley/utils/: compat.py  feature_utils.py  model_utils.py
